--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ const experience = [
 <Layout title="Bharghav Srinivasan - Full Stack Developer">
     <div class="min-h-screen bg-black text-white w-full">
       <!-- Main Layout -->
-      <div class="flex min-h-screen">
+      <div class="flex flex-col-reverse lg:flex-row min-h-screen">
         <!-- Left Content -->
         <div class="flex-1 p-8 lg:p-16 max-w-2xl">
           <!-- Header -->
@@ -147,13 +147,13 @@ const experience = [
 
         </div>
 
-        <!-- Right Image -->
-        <div class="hidden lg:block flex-1 relative">
-          <div class="sticky top-0 h-screen flex items-center justify-center">
+        <!-- Right Image (now visible on all screens, responsive size) -->
+        <div class="flex justify-center items-center mb-8 lg:mb-0 lg:block flex-1 relative">
+          <div class="w-40 h-40 sm:w-56 sm:h-56 md:w-72 md:h-72 lg:w-2/3 lg:h-2/3 flex items-center justify-center">
             <img
               src="/image.jpeg"
               alt="Bharghav Srinivasan"
-              class="w-2/3 h-2/3 object-cover rounded-lg shadow-2xl"
+              class="w-full h-full object-cover rounded-lg shadow-2xl"
             />
           </div>
         </div>
